<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rejinpaul Network</string>
    <string name="authenticate">Authentication</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_out">Signed Out</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_photo">Photo URL</string>

    <string name="logout">Logout</string>
    <string name="verify">Verify</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="login">Login</string>
    <string name="newacc">Dont have an account? Create New Account</string>
    <string name="orlogin">or Login with</string>
    <string name="home">Home</string>
    <string name="materials">Study Materials</string>
    <string name="impquestion">Important Questions</string>
    <string name="notification">Notifications</string>
    <string name="result">Results</string>
    <string name="About_us">About_us</string>
    <string name="syllabus">Syllabus</string>
    <string name="save">Save</string>
    <string name="choose">Select a Category</string>
    <string name="semester">Select a Semester</string>
    <string name="course">Select a Course</string>
    <string name="create">Create Account</string>
    <string name="username">Username</string>
    <string name="question">Question Papers</string>
    <!--<string name="google_id">695608373669-3sethe3hgv7duv5g1u0c8vlp24u6c522.apps.googleusercontent.com</string>-->
    <string name="google_id">695608373669-5qji172fie6ihb8o2nc0uijtrb14qcia.apps.googleusercontent.com</string>

    <string name="notification_channel_id">default</string>
    <string name="forget">Forgot Password?</string>
    <string name="link_pass">Enter your registered Email below to send Password reset link</string>
    <string name="send">Send</string>
    <string name="events">Events</string>
    <string name="warn">This option is only for the users who registered through Email. This is not applicable for the users registered through social app.</string>
    <string name="event_reg">Notify about the Events organized by your Institution</string>
    <string name="profile">User Profile Details</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="sprofile">Profile</string>
    <string name="prof_update">Profile Updated Successfully</string>
    <string name="ok">OK</string>
    <string name="res_note">Enter your register number below to check your results</string>
    <string name="source">Select Source to upload</string>
    <string name="qb">Question Bank</string>
    <string name="qp">Question Papers</string>
    <string name="notes">Notes</string>
    <string name="msg_log">You need to logout to make changes effect</string>
    <string name="get">Get Result</string>
    <string name="enlarge">Click on the image to enlarge</string>
    <string name="link1">https://coe1.annauniv.edu</string>
    <string name="link2">https://coe2.annauniv.edu</string>
    <string name="link3">https://aucoe.annauniv.edu</string>
    <string name="link_note">Official links of Anna University Results</string>
    <string name="downlink">&lt;font color="#303F9F">&lt;b>- CLICK HERE TO DOWNLOAD.&lt;/b>&lt;/font></string>
    <string name="clientMail">nrrejinpaul&#64;gmail.com</string>
    <string name="drop">Do you have questions on how to advertise your business with us? Please reach out to</string>
    <string name="rating">Rate our application on Google Play Store</string>
    <string name="business">For Business and Advertisement contact 1234567890</string>
    <string name="thank">Thank you for your interest in Rejinpaul Network application. Please contact us using above Mail Id about your need to help us serve you better.</string>
    <string name="search">Search</string>
    <string name="timetable">Timetable</string>
    <string name="more_info">For more details visit:</string>
    <string name="url">https://rejinpaulnetwork.com</string>
    <string name="srch_url">Enter a keyword to search contents from rejinpaulnetwork.com</string>
    <string name="About_us_long">Rejinpaul Network is one of Leading Website among the Engineering Student Community since 2010. We provide Study Materials for Undergraduate and Post-Graduate Courses of Anna University. It also provides preparation materials for all competitive exams.</string>
    <string name="About_us_long1">Study materials For School Board Exam Students are also available in our website. Examinees can get various University Results And all States Board Exam Results. The website also posts Theory and Practical Exams Time Table Notifications, Internal Exam Schedule, Entrance Exam.</string>

    <string-array name="ug">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
        <item>VI</item>
        <item>VII</item>
        <item>VIII</item>
    </string-array>

    <string-array name="pg">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
    </string-array>

    <string-array name="temp_array">
        <item>Select a Semester</item>
    </string-array>


    <string-array name="temp_array1">
        <item>Select a Course</item>
        <item>UG</item>
        <item>PG</item>
    </string-array>
</resources>