<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_syllabus"
        android:icon="@drawable/syllabus"
        android:title="@string/syllabus" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_home"
        android:title="@string/sprofile" />
    <item
        android:id="@+id/nav_materials"
        android:icon="@drawable/study"
        android:title="@string/materials" />
    <item
        android:id="@+id/nav_timetable"
        android:icon="@drawable/time"
        android:title="@string/timetable" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/search"/>

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/friends"
        android:title="@string/events"/>

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/messages"
        android:title="@string/notification" />

    <item
        android:id="@+id/nav_result"
        android:icon="@drawable/result"
        android:title="@string/result" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/about"
        android:title="@string/About_us" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

</menu>