<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/fp_toolbar"
        layout="@layout/app_bar_layout"/>

    <TextView
        style="@style/textViewStyle"
        android:text="@string/warn"
        android:layout_below="@id/fp_toolbar"
        android:id="@+id/text4"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textColor="@color/colorWhite"/>

    <TextView
        style="@style/textViewStyle"
        android:text="@string/link_pass"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="10dp"
        android:id="@+id/text3"
        android:layout_below="@id/text4"/>

    <EditText
        style="@style/editTextStyle"
        android:layout_below="@id/text3"
        android:layout_margin="10dp"
        android:hint="Email"
        android:id="@+id/reset_email"/>

    <Button
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:text="@string/send"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_reset"
        android:layout_below="@id/reset_email"/>

</RelativeLayout>