<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logonbg"
    android:padding="10dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo1"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:id="@+id/login_email"
        style="@style/editTextStyle"
        android:hint="Email"
        android:layout_marginTop="10dp"
        android:layout_below="@id/logo"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/login_password"
        style="@style/editTextStyle"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_below="@id/login_email" />

    <Button
        android:id="@+id/login_button"
        style="@style/buttonStyle"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />


    <TextView
        style="@style/textViewStyle"
        android:id="@+id/forgot_password"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_button"
        android:text="@string/forget"
        android:textSize="16sp"
        android:textColor="@color/colorWheat"/>

    <TextView
        style="@style/textViewStyle"
        android:id="@+id/register_account_link"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@id/forgot_password"
        android:text="@string/newacc"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv10"
        style="@style/textViewStyle"
        android:layout_below="@id/register_account_link"
        android:gravity="center_horizontal"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="30dp"
        android:text="@string/orlogin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv10"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="3">

        <ImageView
            android:id="@+id/fb_signin_button"
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/twit_signin_button"
            android:layout_width="100dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:src="@drawable/twitter" />

        <ImageView
            android:id="@+id/google_signin_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/google" />
    </LinearLayout>
</RelativeLayout>
</ScrollView>