<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/logonbg">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_reg"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:id="@+id/text10"/>

    <EditText
        style="@style/editTextStyle"
        android:id="@+id/event_name"
        android:layout_below="@id/text10"
        android:hint="Event Name"
        android:inputType="text"
        android:layout_marginTop="10dp"/>

    <EditText
        style="@style/editTextStyle"
        android:id="@+id/event_date"
        android:layout_below="@id/event_name"
        android:hint="Event Date"
        android:focusable="false"
        android:layout_marginTop="10dp"/>

    <EditText
        style="@style/editTextStyle"
        android:id="@+id/event_location"
        android:inputType="text"
        android:layout_below="@id/event_date"
        android:hint="Event Location"
        android:layout_marginTop="10dp"/>

    <TextView
        style="@style/textViewStyle"
        android:text="Event Type"
        android:id="@+id/text11"
        android:layout_below="@id/event_location"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <Spinner
        style="@style/spinnerTheme"
        android:id="@+id/event_type"
        android:layout_below="@id/text11"
        android:layout_marginTop="10dp"/>


    <TextView
        style="@style/textViewStyle"
        android:text="@string/source"
        android:id="@+id/text12"
        android:layout_below="@id/event_type"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/source"
        android:layout_below="@id/text12"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/ic_insert_photo"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_edit_text"/>

    <Button
        style="@style/buttonStyle"
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:id="@+id/event_send"
        android:layout_below="@id/source"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
</ScrollView>