<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logonbg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/colorGray"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/mrow1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/blueptrn"
            android:gravity="center"
            android:orientation="vertical"
            android:alpha="0.8">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notes"
                android:background="@color/colorWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mrow2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/blueptrn"
            android:gravity="center"
            android:orientation="vertical"
            android:alpha="0.8">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ques"
                android:background="@color/colorWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mrow3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/blueptrn"
            android:gravity="center"
            android:orientation="vertical"
            android:alpha="0.8">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_qb"
                android:background="@color/colorWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qb"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>